--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -23,7 +23,7 @@
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
         </dependency>
-        
+
         <!-- JavaFX FXML -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -31,7 +31,7 @@
             <version>${javafx.version}</version>
         </dependency>
 
-        <!-- Add other dependencies here if needed -->
+        <!-- Other dependencies if needed -->
     </dependencies>
 
     <!-- Build configuration -->
@@ -49,7 +49,6 @@
             </plugin>
 
             <!-- Maven Shade Plugin (Optional) -->
-            <!-- Use this if you want to create a fat JAR -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -63,7 +62,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>BackendTest</mainClass> <!-- Replace with your main class -->
+                                    <mainClass>com.example.MainApp</mainClass> <!-- Fully qualified main class -->
                                 </transformer>
                             </transformers>
                         </configuration>
