fully configured maven for javafx

--- a/Main/pom.xml
+++ b/Main/pom.xml
@@ -8,9 +8,16 @@
     <artifactId>Main</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
+        </repository>
+    </repositories>
+
     <properties>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <javafx.version>17.0.2</javafx.version> <!-- JavaFX version -->
     </properties>
@@ -30,5 +37,17 @@
             <version>${javafx.version}</version>
         </dependency>
     </dependencies>
-    
+    <build>
+        <plugins>
+            <!-- JavaFX Maven Plugin -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>MainApp</mainClass> <!-- Replace with your fully qualified MainApp class -->
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
